--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [not win]
+  skip: true  # [not win or py<37]
 
 requirements:
   build:
@@ -25,8 +25,6 @@ requirements:
     - toml
     - winpty
   host:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
     - setuptools
     - wheel
     - python
@@ -39,6 +37,11 @@ requirements:
 test:
   imports:
     - winpty
+  requires:
+    - pip
+  commands:
+    - pip check
+
 
 about:
   home: https://github.com/spyder-ide/pywinpty
