--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [not win or py<38]
+  skip: true  # [(not win) or py<38]
   script: 
     - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
     - cargo-bundle-licenses --format yaml --output "{{ SRC_DIR }}\THIRDPARTY.yml"
@@ -18,6 +18,7 @@ build:
 requirements:
   build:
     - {{ compiler('rust') }}
+    - {{ compiler('cxx') }}
     - cargo-bundle-licenses
   host:
     - python
