--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,8 @@
 {% set version = "2.0.15" %}
+{% set name = "pywinpty" %}
 
 package:
-  name: pywinpty
+  name: {{ name }}
   version: {{ version }}
 
 source:
