--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,6 @@ requirements:
 test:
   source_files:
     - winpty/tests
-    - runtests.py
   imports:
     - winpty
   requires:
@@ -44,7 +43,7 @@ test:
   commands:
     - pip check
     # test_read - issues with encoding
-    - python -m runtests -k "not test_read"
+    - pytest -vv -k "not test_read" winpty/tests
 
 
 about:
